# cli-template-rs

./: README.md
.github/: dependabot.yml
.github/workflows/: build.yml  template_values.toml
template/: .gitignore  Cargo.toml  build.rs  cargo-generate.toml  config.toml
template/config/: config.toml
template/src/: cli.rs  config.rs  log.rs  main.rs
template/src/commands/: command1.rs  command2.rs  completion.rs  mod.rs
