[package]
# name = "{{project-name}}"
name = "template-project"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
build = "build.rs"
# authors = ["{{authors}}"]
authors = ["author-of-template-project"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
serde = { version = "1.0.178", features = ["derive"] }
xdg = "^2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tokio = { version = "^1.5", features = ["full"] }
tokio-graceful-shutdown = "0.13.0"
miette = "5.10.0"

[build-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
miette = "5.10.0"

[[bin]]
# name = "{{crate-name}}"
name = "template-project"
