[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
build = "build.rs"
authors = ["{{authors}}"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
serde = { version = "1.0.178", features = ["derive"] }
directories = "5.0"
tracing = "0.1"
tracing-log = "0.1.3"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tokio = { version = "^1.5", features = ["full"] }
tokio-graceful-shutdown = "0.14.0"
miette = "5.10.0"

[build-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
miette = "5.10.0"

[[bin]]
name = "{{application}}"
path = "src/main.rs"